==> KouweiLee/xiuos-rm3562-mcu/Ubiquitous/XiZi_IIoT_Macro/board/edu-arm32/third_party_driver/spi/connect_spi.c <==
#include <connect_spi.h>
#define SPI1_MASTER_SLAVE_MODE           (SPI_MASTER)
#define SPI1_UNIT                        (CM_SPI1)
#define SPI1_CLK                         (FCG1_PERIPH_SPI1)
#define SPI1_SS_PORT                     (GPIO_PORT_I)
#define SPI1_SS_PIN                      (GPIO_PIN_01)
#define SPI1_SCK_PORT                    (GPIO_PORT_H)
#define SPI1_SCK_PIN                     (GPIO_PIN_14)
#define SPI1_SCK_FUNC                    (GPIO_FUNC_40)
#define SPI1_MOSI_PORT                   (GPIO_PORT_I)
#define SPI1_MOSI_PIN                    (GPIO_PIN_00)
#define SPI1_MOSI_FUNC                   (GPIO_FUNC_41)
#define SPI1_MISO_PORT                   (GPIO_PORT_H)
#define SPI1_MISO_PIN                    (GPIO_PIN_15)
#define SPI1_MISO_FUNC                   (GPIO_FUNC_42)
#define SPI1_DEVICE_SLAVE_ID_0 0
#define SPI6_UNIT                        (CM_SPI6)
#define SPI6_CLK                         (FCG1_PERIPH_SPI6)
#define SPI6_SS_PORT                     (GPIO_PORT_E)
#define SPI6_SS_PIN                      (GPIO_PIN_02)
#define SPI6_SCK_PORT                    (GPIO_PORT_E)
#define SPI6_SCK_PIN                     (GPIO_PIN_03)
#define SPI6_SCK_FUNC                    (GPIO_FUNC_46)
#define SPI6_MOSI_PORT                   (GPIO_PORT_E)
#define SPI6_MOSI_PIN                    (GPIO_PIN_04)
#define SPI6_MOSI_FUNC                   (GPIO_FUNC_47)
#define SPI6_MISO_PORT                   (GPIO_PORT_E)
#define SPI6_MISO_PIN                    (GPIO_PIN_05)

static uint32 SpiSdkInit(struct SpiDriver *spi_drv)
{
    NULL_PARAM_CHECK(spi_drv);

    stc_spi_init_t stcSpiInit;
    stc_gpio_init_t stcGpioInit;

    SpiDeviceParam *dev_param = (SpiDeviceParam *)(spi_drv->driver.private_data);

#ifdef BSP_USING_SPI1
    /* Configure Port */
    (void)GPIO_StructInit(&stcGpioInit);
    stcGpioInit.u16PinState = PIN_STAT_RST;
    stcGpioInit.u16PinDir = PIN_DIR_OUT;
    (void)GPIO_Init(SPI1_SS_PORT, SPI1_SS_PIN, &stcGpioInit);
    GPIO_SetPins(SPI1_SS_PORT, SPI1_SS_PIN);

    GPIO_SetFunc(SPI1_SCK_PORT, SPI1_SCK_PIN, SPI1_SCK_FUNC);
    GPIO_SetFunc(SPI1_MOSI_PORT, SPI1_MOSI_PIN, SPI1_MOSI_FUNC);
    GPIO_SetFunc(SPI1_MISO_PORT, SPI1_MISO_PIN, SPI1_MISO_FUNC);

    /* Configuration SPI */
    FCG_Fcg1PeriphClockCmd(SPI1_CLK, ENABLE);
    SPI_StructInit(&stcSpiInit);

    stcSpiInit.u32WireMode          = SPI_4_WIRE;
    stcSpiInit.u32TransMode         = SPI_FULL_DUPLEX;
    stcSpiInit.u32MasterSlave       = SPI1_MASTER_SLAVE_MODE;
    stcSpiInit.u32Parity            = SPI_PARITY_INVD;

    if (SPI_MODE_0 == dev_param->spi_master_param->spi_work_mode & 0x3) {
        stcSpiInit.u32SpiMode       = SPI_MD_0;
    } else if (SPI_MODE_1 == dev_param->spi_master_param->spi_work_mode & 0x3) {
        stcSpiInit.u32SpiMode       = SPI_MD_1;
    } else if (SPI_MODE_2 == dev_param->spi_master_param->spi_work_mode & 0x3) {
        stcSpiInit.u32SpiMode       = SPI_MD_2;
    } else if (SPI_MODE_3 == dev_param->spi_master_param->spi_work_mode & 0x3) {
        stcSpiInit.u32SpiMode       = SPI_MD_3;
    }
    
    stcSpiInit.u32BaudRatePrescaler = SPI_BR_CLK_DIV64;

    if (8 == dev_param->spi_master_param->spi_data_bit_width) {
        stcSpiInit.u32DataBits      = SPI_DATA_SIZE_8BIT;
    } else if (7 == dev_param->spi_master_param->spi_data_bit_width) {
        stcSpiInit.u32DataBits      = SPI_DATA_SIZE_7BIT;
    }
    
    if (SPI_LSB == dev_param->spi_master_param->spi_work_mode & 0x4) {
        stcSpiInit.u32FirstBit      = SPI_FIRST_LSB;
    } else if(SPI_MSB == dev_param->spi_master_param->spi_work_mode & 0x4) {
        stcSpiInit.u32FirstBit      = SPI_FIRST_MSB;
    }

    stcSpiInit.u32FrameLevel        = SPI_1_FRAME;

    (void)SPI_Init(SPI1_UNIT, &stcSpiInit);
    SPI_Cmd(SPI1_UNIT, ENABLE);
#endif

#ifdef BSP_USING_SPI6
    /* Configure Port */
    (void)GPIO_StructInit(&stcGpioInit);
    stcGpioInit.u16PinState = PIN_STAT_RST;
    stcGpioInit.u16PinDir = PIN_DIR_OUT;
    (void)GPIO_Init(SPI6_SS_PORT, SPI6_SS_PIN, &stcGpioInit);
    GPIO_SetPins(SPI6_SS_PORT, SPI6_SS_PIN);

    GPIO_SetFunc(SPI6_SCK_PORT, SPI6_SCK_PIN, SPI6_SCK_FUNC);
    GPIO_SetFunc(SPI6_MOSI_PORT, SPI6_MOSI_PIN, SPI6_MOSI_FUNC);
    GPIO_SetFunc(SPI6_MISO_PORT, SPI6_MISO_PIN, SPI6_MISO_FUNC);

    /* Configuration SPI */
    FCG_Fcg1PeriphClockCmd(SPI6_CLK, ENABLE);
    SPI_StructInit(&stcSpiInit);

    stcSpiInit.u32WireMode          = SPI_4_WIRE;
    stcSpiInit.u32TransMode         = SPI_FULL_DUPLEX;
    stcSpiInit.u32MasterSlave       = SPI1_MASTER_SLAVE_MODE;
    stcSpiInit.u32Parity            = SPI_PARITY_INVD;

    if (SPI_MODE_0 == dev_param->spi_master_param->spi_work_mode & 0x3) {
        stcSpiInit.u32SpiMode       = SPI_MD_0;
    } else if (SPI_MODE_1 == dev_param->spi_master_param->spi_work_mode & 0x3) {
        stcSpiInit.u32SpiMode       = SPI_MD_1;
    } else if (SPI_MODE_2 == dev_param->spi_master_param->spi_work_mode & 0x3) {
        stcSpiInit.u32SpiMode       = SPI_MD_2;
    } else if (SPI_MODE_3 == dev_param->spi_master_param->spi_work_mode & 0x3) {
        stcSpiInit.u32SpiMode       = SPI_MD_3;
    }
    
    stcSpiInit.u32BaudRatePrescaler = SPI_BR_CLK_DIV64;

    if (8 == dev_param->spi_master_param->spi_data_bit_width) {
        stcSpiInit.u32DataBits      = SPI_DATA_SIZE_8BIT;
    } else if (7 == dev_param->spi_master_param->spi_data_bit_width) {
        stcSpiInit.u32DataBits      = SPI_DATA_SIZE_7BIT;
    }
    
    if (SPI_LSB == dev_param->spi_master_param->spi_work_mode & 0x4) {
        stcSpiInit.u32FirstBit      = SPI_FIRST_LSB;
    } else if(SPI_MSB == dev_param->spi_master_param->spi_work_mode & 0x4) {
        stcSpiInit.u32FirstBit      = SPI_FIRST_MSB;
    }

    stcSpiInit.u32FrameLevel        = SPI_1_FRAME;

    (void)SPI_Init(SPI6_UNIT, &stcSpiInit);
    SPI_Cmd(SPI6_UNIT, ENABLE);
#endif

    return EOK;
}

static uint32 SpiWriteData(struct SpiHardwareDevice *spi_dev, struct SpiDataStandard *spi_datacfg)
{
    SpiDeviceParam *dev_param = (SpiDeviceParam *)(spi_dev->haldev.private_data);

    uint8 cs_gpio_pin = dev_param->spi_slave_param->spi_cs_gpio_pin;
    uint8 cs_gpio_port = dev_param->spi_slave_param->spi_cs_gpio_port;
    CM_SPI_TypeDef *spi = spi_dev->haldev.owner_bus->private_data; 

    int i = 0;
    uint32 ret = EOK;
    int32 spi_write_status = 0;

    while (NONE != spi_datacfg) {
        if (spi_datacfg->spi_chip_select) {
            GPIO_ResetPins(cs_gpio_port, cs_gpio_pin);
        }

        if (spi_datacfg->length) {
            uint8 *tx_buff = x_malloc(spi_datacfg->length);
            if ((spi_datacfg->tx_buff) && (tx_buff)) {
                memset(tx_buff, 0, spi_datacfg->length);

                for (i = 0; i < spi_datacfg->length; i++) {
                    tx_buff[i] = ((uint8 *)spi_datacfg->tx_buff)[i];
                }

                HwSpiEnable(spi);
                spi_write_status = SPI_Trans(spi, tx_buff, spi_datacfg->length, 1000);

                while (RESET != SPI_GetStatus(spi, SPI_FLAG_IDLE));

                if (LL_OK == spi_write_status) {
                    ret = ERROR;
                }
            }

            if (tx_buff) {
                x_free(tx_buff);
            }

            SPI_ClearStatus(spi, SPI_FLAG_CLR_ALL | SPI_FLAG_RX_BUF_FULL);            
        }

        if (spi_datacfg->spi_cs_release) {
            GPIO_SetPins(cs_gpio_port, cs_gpio_pin);
        }

        spi_datacfg = spi_datacfg->next;
    }

    return ret;
}

static uint32 SpiReadData(struct SpiHardwareDevice *spi_dev, struct SpiDataStandard *spi_datacfg)
{
    SpiDeviceParam *dev_param = (SpiDeviceParam *)(spi_dev->haldev.private_data);

    uint8 cs_gpio_pin = dev_param->spi_slave_param->spi_cs_gpio_pin;
    uint8 cs_gpio_port = dev_param->spi_slave_param->spi_cs_gpio_port;
    CM_SPI_TypeDef *spi = spi_dev->haldev.owner_bus->private_data; 

    int i = 0;
    int32 spi_read_status = 0;
    uint32 spi_read_length = 0;

    while (NONE != spi_datacfg) {
        if (spi_datacfg->spi_chip_select) {
            GPIO_ResetPins(cs_gpio_port, cs_gpio_pin);
        }

        if (spi_datacfg->length) {
            uint8_t *rx_buff = x_malloc(spi_datacfg->length);
            if ((spi_datacfg->rx_buff) && (rx_buff)) {
                memset(rx_buff, 0xFF, spi_datacfg->length);

                HwSpiEnable(spi);
                spi_read_status = SPI_Receive(spi, rx_buff, spi_datacfg->length, 1000);

                while (RESET != SPI_GetStatus(spi, SPI_FLAG_IDLE));
                if (LL_OK == spi_read_status) {
                    for (i = 0; i < spi_datacfg->length; i++) {           
                        ((uint8_t *)spi_datacfg->rx_buff)[i] = rx_buff[i];
                    }
                }
            }
            if (rx_buff) {
                x_free(rx_buff);
            }

            SPI_ClearStatus(spi, SPI_FLAG_CLR_ALL | SPI_FLAG_RX_BUF_FULL);
        }

        if (spi_datacfg->spi_cs_release) {
            GPIO_SetPins(cs_gpio_port, cs_gpio_pin);
        }

        spi_read_length += spi_datacfg->length;
        spi_datacfg = spi_datacfg->next;
    }

    return spi_read_length;
}

static int BoardSpiDevBend(void)
{
    x_err_t ret = EOK;

#ifdef SPI_1_DEVICE_NAME_0
    static struct SpiHardwareDevice spi1_device0;
    memset(&spi1_device0, 0, sizeof(struct SpiHardwareDevice));

    static struct SpiSlaveParam spi1_slaveparam0;
    memset(&spi1_slaveparam0, 0, sizeof(struct SpiSlaveParam));

    spi1_slaveparam0.spi_slave_id = SPI1_DEVICE_SLAVE_ID_0;
    spi1_slaveparam0.spi_cs_gpio_pin = SPI1_SS_PIN;
    spi1_slaveparam0.spi_cs_gpio_port = SPI1_SS_PORT;

    spi1_device0.spi_param.spi_slave_param = &spi1_slaveparam0;

    spi1_device0.spi_dev_done = &(spi_dev_done);

    ret = SpiDeviceRegister(&spi1_device0, (void *)(&spi1_device0.spi_param), SPI_1_DEVICE_NAME_0);
    if (EOK != ret) {
        KPrintf("BoardSpiDevBend SpiDeviceRegister device %s error %d\n", SPI_1_DEVICE_NAME_0, ret);
        return ERROR;
    }  

    ret = SpiDeviceAttachToBus(SPI_1_DEVICE_NAME_0, SPI_BUS_NAME_1);
    if (EOK != ret) {
        KPrintf("BoardSpiDevBend SpiDeviceAttachToBus device %s error %d\n", SPI_1_DEVICE_NAME_0, ret);
        return ERROR;
    }  
#endif

#ifdef SPI_6_DEVICE_NAME_0
    static struct SpiHardwareDevice spi6_device0;
    memset(&spi6_device0, 0, sizeof(struct SpiHardwareDevice));

    static struct SpiSlaveParam spi6_slaveparam0;
    memset(&spi6_slaveparam0, 0, sizeof(struct SpiSlaveParam));

    spi6_slaveparam0.spi_slave_id = SPI1_DEVICE_SLAVE_ID_0;
    spi6_slaveparam0.spi_cs_gpio_pin = SPI6_SS_PIN;
    spi6_slaveparam0.spi_cs_gpio_port = SPI6_SS_PORT;

    spi6_device0.spi_param.spi_slave_param = &spi6_slaveparam0;

    spi6_device0.spi_dev_done = &(spi_dev_done);

    ret = SpiDeviceRegister(&spi6_device0, (void *)(&spi6_device0.spi_param), SPI_6_DEVICE_NAME_0);
    if (EOK != ret) {
        KPrintf("BoardSpiDevBend SpiDeviceRegister device %s error %d\n", SPI_6_DEVICE_NAME_0, ret);
        return ERROR;
    }  

    ret = SpiDeviceAttachToBus(SPI_6_DEVICE_NAME_0, SPI_BUS_NAME_6);
    if (EOK != ret) {
        KPrintf("BoardSpiDevBend SpiDeviceAttachToBus device %s error %d\n", SPI_6_DEVICE_NAME_0, ret);
        return ERROR;
    }  
#endif

    return ret;
}

int HwSpiInit(void)
{
    x_err_t ret = EOK;

#ifdef BSP_USING_SPI1
    static struct SpiBus spi1_bus;
    memset(&spi1_bus, 0, sizeof(struct SpiBus));

    static struct SpiDriver spi1_driver;
    memset(&spi1_driver, 0, sizeof(struct SpiDriver));

    spi1_bus.private_data = SPI1_UNIT;
    spi1_driver.configure = SpiDrvConfigure;

    ret = BoardSpiBusInit(&spi1_bus, &spi1_driver, SPI_BUS_NAME_1, SPI_1_DRV_NAME);
    if (EOK != ret) {
        KPrintf("BoardSpiBusInit error ret %u\n", ret);
        return ERROR;
    }

#endif

#ifdef BSP_USING_SPI6
    static struct SpiBus spi6_bus;
    memset(&spi6_bus, 0, sizeof(struct SpiBus));

    static struct SpiDriver spi6_driver;
    memset(&spi6_driver, 0, sizeof(struct SpiDriver));

    spi6_bus.private_data = SPI6_UNIT;
    spi6_driver.configure = SpiDrvConfigure;

    ret = BoardSpiBusInit(&spi6_bus, &spi6_driver, SPI_BUS_NAME_6, SPI_6_DRV_NAME);
    if (EOK != ret) {
        KPrintf("BoardSpiBusInit error ret %u\n", ret);
        return ERROR;
    }

#endif

    ret = BoardSpiDevBend();
    if (EOK != ret) {
        KPrintf("BoardSpiDevBend error ret %u\n", ret);
        return ERROR;
    } 

    return ret;
}
