==> KouweiLee/xiuos-rm3562-mcu/Ubiquitous/XiZi_IIoT_Macro/board/stm32l476rgt6/third_party_driver/spi/connect_spi.c <==
#include <connect_spi.h>

static uint32 SpiSdkInit(struct SpiDriver *spi_drv)
{
    NULL_PARAM_CHECK(spi_drv);
    GPIO_InitTypeDef GPIO_InitStruct = {0};
    SpiDeviceParam *dev_param = (SpiDeviceParam *)(spi_drv->driver.private_data);

    SPI_HandleTypeDef *hspi = spi_drv->driver.owner_bus->private_data;

    struct SpiSlaveParam *slaveparam = dev_param->spi_slave_param;
    switch ((uint32)hspi->Instance)
    {
    
#ifdef BSP_USING_SPI2
    case (uint32)SPI2:
        __HAL_RCC_SPI2_CLK_ENABLE();
    
        __HAL_RCC_GPIOC_CLK_ENABLE();
        __HAL_RCC_GPIOB_CLK_ENABLE();

        /**SPI2 GPIO Configuration    
        PC2     ------> SPI2_MISO
        PC3     ------> SPI2_MOSI
        PB10     ------> SPI2_SCK 
        */
        GPIO_InitStruct.Pin = GPIO_PIN_2|GPIO_PIN_3;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF5_SPI2;
        HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);

        GPIO_InitStruct.Pin = GPIO_PIN_10;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF5_SPI2;
        HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

        /*Configure GPIO pin :  CS port */
        GPIO_InitStruct.Pin = slaveparam->spi_cs_gpio_pin;
        GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
        GPIO_TypeDef* gpio_port = (GPIO_TypeDef*)slaveparam->spi_cs_gpio_port;
        HAL_GPIO_Init(gpio_port, &GPIO_InitStruct);

        HAL_GPIO_WritePin(gpio_port, slaveparam->spi_cs_gpio_pin, GPIO_PIN_SET);

        hspi->Init.Mode = SPI_MODE_MASTER;
        hspi->Init.Direction = SPI_DIRECTION_2LINES;
        hspi->Init.DataSize = (dev_param->spi_master_param->spi_data_bit_width- 1 ) << 8  ;
        // mode
        
        hspi->Init.NSS = SPI_NSS_SOFT;

        if (SPI_MODE_0 == dev_param->spi_master_param->spi_work_mode & 0x3) {
            hspi->Init.CLKPolarity = SPI_POLARITY_LOW;
            hspi->Init.CLKPhase = SPI_PHASE_1EDGE;
        } else if (SPI_MODE_1 == dev_param->spi_master_param->spi_work_mode & 0x3) {
            hspi->Init.CLKPolarity = SPI_POLARITY_LOW;
            hspi->Init.CLKPhase = SPI_PHASE_2EDGE;
        } else if (SPI_MODE_2 == dev_param->spi_master_param->spi_work_mode & 0x3) {
            hspi->Init.CLKPolarity = SPI_POLARITY_HIGH;
            hspi->Init.CLKPhase = SPI_PHASE_1EDGE;
        } else if (SPI_MODE_3 == dev_param->spi_master_param->spi_work_mode & 0x3) {
            hspi->Init.CLKPolarity = SPI_POLARITY_HIGH;
            hspi->Init.CLKPhase = SPI_PHASE_2EDGE;
        }

        if (dev_param->spi_master_param->spi_work_mode & 0x4)
        {
            hspi->Init.FirstBit = SPI_FIRSTBIT_MSB;
        } else {
            hspi->Init.FirstBit = SPI_FIRSTBIT_LSB;
        }

        hspi->Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_64;
        
        hspi->Init.TIMode = SPI_TIMODE_DISABLE;

        hspi->Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;

        hspi->Init.CRCPolynomial = 7;
        hspi->Init.CRCLength = SPI_CRC_LENGTH_DATASIZE;
        hspi->Init.NSSPMode = SPI_NSS_PULSE_ENABLE;
        int ret = HAL_SPI_Init(hspi);
        if (ret != HAL_OK)
        {
            KPrintf("HwSPIInit SPI2 error ret %u\n", ret);
        }
        break;
#endif

#ifdef BSP_USING_SPI3
    case (uint32)SPI3:
        __HAL_RCC_SPI3_CLK_ENABLE();
    
        __HAL_RCC_GPIOC_CLK_ENABLE();
        __HAL_RCC_GPIOB_CLK_ENABLE();

        /**SPI3 GPIO Configuration    
        PC10     ------> SPI3_SCK
        PC11     ------> SPI3_MISO
        PB5     ------> SPI3_MOSI 
        */
        GPIO_InitStruct.Pin = GPIO_PIN_10|GPIO_PIN_11;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF6_SPI3;
        HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);

        GPIO_InitStruct.Pin = GPIO_PIN_5;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF6_SPI3;
        HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

        /*Configure GPIO pin : CS port */
        GPIO_InitStruct.Pin = slaveparam->spi_cs_gpio_pin;
        GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
        GPIO_TypeDef* gpio_port = (GPIO_TypeDef*)slaveparam->spi_cs_gpio_port;
        HAL_GPIO_Init(gpio_port, &GPIO_InitStruct);

        HAL_GPIO_WritePin(gpio_port, slaveparam->spi_cs_gpio_pin, GPIO_PIN_SET);

        hspi->Init.Mode = SPI_MODE_MASTER;
        hspi->Init.Direction = SPI_DIRECTION_2LINES;
        hspi->Init.DataSize = (dev_param->spi_master_param->spi_data_bit_width- 1 ) << 8  ;
        // mode
        
        hspi->Init.NSS = SPI_NSS_SOFT;

        if (SPI_MODE_0 == dev_param->spi_master_param->spi_work_mode & 0x3) {
            hspi->Init.CLKPolarity = SPI_POLARITY_LOW;
            hspi->Init.CLKPhase = SPI_PHASE_1EDGE;
        } else if (SPI_MODE_1 == dev_param->spi_master_param->spi_work_mode & 0x3) {
            hspi->Init.CLKPolarity = SPI_POLARITY_LOW;
            hspi->Init.CLKPhase = SPI_PHASE_2EDGE;
        } else if (SPI_MODE_2 == dev_param->spi_master_param->spi_work_mode & 0x3) {
            hspi->Init.CLKPolarity = SPI_POLARITY_HIGH;
            hspi->Init.CLKPhase = SPI_PHASE_1EDGE;
        } else if (SPI_MODE_3 == dev_param->spi_master_param->spi_work_mode & 0x3) {
            hspi->Init.CLKPolarity = SPI_POLARITY_HIGH;
            hspi->Init.CLKPhase = SPI_PHASE_2EDGE;
        }

        if (dev_param->spi_master_param->spi_work_mode & 0x4)
        {
            hspi->Init.FirstBit = SPI_FIRSTBIT_MSB;
        } else {
            hspi->Init.FirstBit = SPI_FIRSTBIT_LSB;
        }

        hspi->Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_64;
        
        hspi->Init.TIMode = SPI_TIMODE_DISABLE;

        hspi->Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;

        hspi->Init.CRCPolynomial = 7;
        hspi->Init.CRCLength = SPI_CRC_LENGTH_DATASIZE;
        hspi->Init.NSSPMode = SPI_NSS_PULSE_ENABLE;
        int ret = HAL_SPI_Init(hspi);
        if (ret != HAL_OK)
        {
            KPrintf("HwSPIInit SPI2 error ret %u\n", ret);
        }
        break;
#endif
    default:
        break;
    }

    return EOK;
}

static uint32 SpiWriteData(struct SpiHardwareDevice *spi_dev, struct SpiDataStandard *spi_datacfg)
{
    x_size_t message_length, already_send_length;
    uint16 send_length;
    const uint8 *WriteBuf;
    int state;

    NULL_PARAM_CHECK(spi_dev);
    NULL_PARAM_CHECK(spi_datacfg);
    SpiDeviceParam *dev_param = (SpiDeviceParam *)(spi_dev->haldev.private_data);
    struct SpiSlaveParam *slaveparam = dev_param->spi_slave_param;
    SPI_HandleTypeDef *hspi = spi_dev->haldev.owner_bus->private_data;

    GPIO_TypeDef *slave_port = (GPIO_TypeDef *)slaveparam->spi_cs_gpio_port;
    uint16_t slave_pin = slaveparam->spi_cs_gpio_pin;

    uint8 device_id = dev_param->spi_slave_param->spi_slave_id;
    uint8 device_master_id = dev_param->spi_dma_param->spi_master_id;
    uint8 cs_gpio_pin = dev_param->spi_slave_param->spi_cs_gpio_pin;

    while (NONE != spi_datacfg)
    {
        if (spi_datacfg->spi_chip_select) {
            HAL_GPIO_WritePin(slave_port, slave_pin, GPIO_PIN_RESET);
        }

        message_length = spi_datacfg->length;
        WriteBuf = spi_datacfg->tx_buff;
        while (message_length) {
            if (message_length > 65535){
                send_length = 65535;
                message_length = message_length - 65535;
            } else {
                send_length = message_length;
                message_length = 0;
            }
            /* calculate the start address */
            already_send_length = spi_datacfg->length - send_length - message_length;
            WriteBuf = (uint8 *)spi_datacfg->tx_buff + already_send_length;
            if (spi_datacfg->tx_buff) {
                state = HAL_SPI_Transmit(hspi, (uint8_t *)WriteBuf, send_length, 1000);
            }

            if (state != HAL_OK) {
                KPrintf("spi write error : %d\n", state);
                spi_datacfg->length = 0;
            }
        }

        if (spi_datacfg->spi_cs_release) {
            HAL_GPIO_WritePin(slave_port, slave_pin, GPIO_PIN_SET);
        }

        spi_datacfg = spi_datacfg->next;
    }
    return 1;
}

static uint32 SpiReadData(struct SpiHardwareDevice *spi_dev, struct SpiDataStandard *spi_datacfg)
{
    int state;
    x_size_t message_length, already_send_length;
    uint16 read_length, spi_read_length = 0;
    const uint8 *ReadBuf;

    NULL_PARAM_CHECK(spi_dev);
    NULL_PARAM_CHECK(spi_datacfg);

    SpiDeviceParam *dev_param = (SpiDeviceParam *)(spi_dev->haldev.private_data);
    struct SpiSlaveParam *slaveparam = dev_param->spi_slave_param;
    SPI_HandleTypeDef *hspi = spi_dev->haldev.owner_bus->private_data;

    GPIO_TypeDef *slave_port = (GPIO_TypeDef *)slaveparam->spi_cs_gpio_port;
    uint16_t slave_pin = slaveparam->spi_cs_gpio_pin;

    while (NONE != spi_datacfg) {
        if (spi_datacfg->spi_chip_select) {
            HAL_GPIO_WritePin(slave_port, slave_pin, GPIO_PIN_RESET);
        }

        message_length = spi_datacfg->length;
        ReadBuf = spi_datacfg->rx_buff;

        while (message_length) {
            if (message_length > 65535) {
                read_length = 65535;
                message_length = message_length - 65535;
            } else {
                read_length = message_length;
                message_length = 0;
            }
    
            /* calculate the start address */
            already_send_length = spi_datacfg->length - read_length - message_length;
            ReadBuf = (uint8 *)spi_datacfg->rx_buff + already_send_length;
    
            /* start once data exchange in DMA mode */
            if (spi_datacfg->rx_buff) {
                HAL_SPI_Receive(hspi, (uint8_t *)ReadBuf, read_length, 1000);
            }
    
            if (state != 0) {
                KPrintf("spi read error : %d\n", state);
                spi_datacfg->length = 0;
            }
        }

        if (spi_datacfg->spi_cs_release) {
            HAL_GPIO_WritePin(slave_port, slave_pin, GPIO_PIN_SET);
        }
        spi_read_length += spi_datacfg->length;
        spi_datacfg = spi_datacfg->next;
    }
    return spi_read_length;
}

static int BoardSpiDevBend(void)
{
    x_err_t ret = EOK;

#ifdef SPI_2_DEVICE_NAME_0
    static struct SpiHardwareDevice spi2_device0;
    memset(&spi2_device0, 0, sizeof(struct SpiHardwareDevice));

    // SPI_HandleTypeDef hspi2;
    // hspi2.Instance = SPI2;
    // spi2_device0.private_data = &hspi2;

    static struct SpiSlaveParam spi2_slaveparam0;
    memset(&spi2_slaveparam0, 0, sizeof(struct SpiSlaveParam));

    // spi2_slaveparam0.spi_slave_id = SPI1_DEVICE_SLAVE_ID_0;
    spi2_slaveparam0.spi_cs_gpio_pin = GPIO_PIN_0;
    spi2_slaveparam0.spi_cs_gpio_port = GPIOC_BASE;

    spi2_device0.spi_param.spi_slave_param = &spi2_slaveparam0;

    spi2_device0.spi_dev_done = &(spi_dev_done);

    ret = SpiDeviceRegister(&spi2_device0, (void *)(&spi2_device0.spi_param), SPI_2_DEVICE_NAME_0);
    if (EOK != ret) {
        KPrintf("BoardSpiDevBend SpiDeviceRegister device %s error %d\n", SPI_2_DEVICE_NAME_0, ret);
        return ERROR;
    }  

    ret = SpiDeviceAttachToBus(SPI_2_DEVICE_NAME_0, SPI_BUS_NAME_2);
    if (EOK != ret) {
        KPrintf("BoardSpiDevBend SpiDeviceAttachToBus device %s error %d\n", SPI_2_DEVICE_NAME_0, ret);
        return ERROR;
    }  
#endif

#ifdef SPI_3_DEVICE_NAME_0
    static struct SpiHardwareDevice spi3_device0;
    memset(&spi3_device0, 0, sizeof(struct SpiHardwareDevice));

    static struct SpiSlaveParam spi3_slaveparam0;
    memset(&spi3_slaveparam0, 0, sizeof(struct SpiSlaveParam));

    spi3_slaveparam0.spi_cs_gpio_pin = GPIO_PIN_1;
    spi3_slaveparam0.spi_cs_gpio_port = GPIOC_BASE;

    spi3_device0.spi_param.spi_slave_param = &spi3_slaveparam0;

    spi3_device0.spi_dev_done = &(spi_dev_done);

    ret = SpiDeviceRegister(&spi3_device0, (void *)(&spi3_device0.spi_param), SPI_3_DEVICE_NAME_0);
    if (EOK != ret) {
        KPrintf("BoardSpiDevBend SpiDeviceRegister device %s error %d\n", SPI_3_DEVICE_NAME_0, ret);
        return ERROR;
    }  

    ret = SpiDeviceAttachToBus(SPI_3_DEVICE_NAME_0, SPI_BUS_NAME_3);
    if (EOK != ret) {
        KPrintf("BoardSpiDevBend SpiDeviceAttachToBus device %s error %d\n", SPI_3_DEVICE_NAME_0, ret);
        return ERROR;
    }  
#endif

    return ret;
}

int HwSpiInit(void)
{
    x_err_t ret = EOK;

#ifdef BSP_USING_SPI2
    static struct SpiBus spi2_bus;
    memset(&spi2_bus, 0, sizeof(struct SpiBus));

    static struct SpiDriver spi2_driver;
    memset(&spi2_driver, 0, sizeof(struct SpiDriver));

    static SPI_HandleTypeDef hspi2;

    hspi2.Instance = SPI2;
    spi2_bus.private_data = &hspi2;
    spi2_driver.configure = SpiDrvConfigure;
    // spi2_driver.driver.private_data = &hspi2;

    ret = BoardSpiBusInit(&spi2_bus, &spi2_driver, SPI_BUS_NAME_2, SPI_2_DRV_NAME);
    if (EOK != ret) {
        KPrintf("BoardSpiBusInit error ret %u\n", ret);
        return ERROR;
    }

#endif

#ifdef BSP_USING_SPI3
    static struct SpiBus spi3_bus;
    memset(&spi3_bus, 0, sizeof(struct SpiBus));

    static struct SpiDriver spi3_driver;
    memset(&spi3_driver, 0, sizeof(struct SpiDriver));

    static SPI_HandleTypeDef hspi3;

    hspi3.Instance = SPI3;
    spi3_bus.private_data = &hspi3;
    spi3_driver.configure = SpiDrvConfigure;
    // spi2_driver.driver.private_data = &hspi2;

    ret = BoardSpiBusInit(&spi3_bus, &spi3_driver, SPI_BUS_NAME_3, SPI_3_DRV_NAME);
    if (EOK != ret) {
        KPrintf("BoardSpiBusInit error ret %u\n", ret);
        return ERROR;
    }

#endif

    ret = BoardSpiDevBend();
    if (EOK != ret) {
        KPrintf("BoardSpiDevBend error ret %u\n", ret);
        return ERROR;
    } 

    return ret;
}
